# quant-tools

./: .gitattributes  .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md  ROADMAP.md  index.html  justfile  makefile  package-lock.json  package.json  test.md
.github/workflows/: ci.yml  clippy.yml  deploy.yml  deploy_docs.yml  deploy_mdbook.yml
.husky/: commit-msg
api/: all.html  index.html
assets/js/: search-data.json
book/: introduction.html  print.html  searchindex.js
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  contributing.md  development.md  getting-started.md  introduction.md
site/: _config.yml  index.md
site/_posts/: 2025-06-30-hello_world.md
src/: common.rs  lib.rs
src/core/engine/: mod.rs
src/core/events/: event.rs  fill.rs  market.rs  mod.rs  signal_order.rs
src/indicators/: ema.rs  macd.rs  mod.rs  rsi.rs
src/pricing/: binomial.rs  black_scholes.rs  mod.rs  monte_carlo.rs
src/risk/: cvar.rs  drawdown.rs  mod.rs  var.rs
src/time_series/: arima.rs  garch.rs  kalman.rs  mod.rs
tests/: integration.rs
update/2025/06/20/: hello_world.html
